@@ -1,5 +1,8 @@
 Release Notes
 
+* 10/06/2017
+  * added PQ.status=paused
+
 * 10/05/2017
   * DDMSpec.getAssociatedEndpoint choosing endpoint with lowest order
 
